--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,1 +1,6 @@
 FROM ros:kinetic
+
+RUN apt-get update && apt-get install -y ros-kinetic-rosserial \
+  ros-kinetic-rosserial-arduino \
+  ros-kinetic-rosnode \
+  ros-kinetic-teleop-twist-joy
